correct some layers

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <div class="layers__item layer-3" style="background-image: url(public/layer3.png);"></div>
       <div class="layers__item layer-4" style="background-image: url(public/layer4.png);"></div>
       <div class="layers__item layer-5" style="background-image: url(public/layer5.png);"></div>
+      <div class="layers__item layer-5" style="background-image: url(public/layer6.png);"></div>
+
     </div>
-    <div class="theme" style="background-image: url(public/layer6.png);"></div>
+    <div class="theme" style="background-image: url(public/layer7.png);"></div>
   </section>
 </body>
 </html>
